--- a/Corporate.html
+++ b/Corporate.html
@@ -2,16 +2,22 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Corporate</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251019">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251019">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251019">
-<link rel="stylesheet" href="./assets/css/corporate.css?v=20251019">
-<script defer src="./assets/js/i18n.js"></script>
-<script defer src="./assets/js/version.js"></script>
-<script defer src="./assets/js/app-shell.js"></script>
-<script defer src="./assets/js/date-controls.js"></script>
-<script defer src="./assets/js/team-filter.js"></script>
-<script defer src="./assets/js/corporate.js?v=20251019"></script>
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/corporate.css?v=2025-10-19">
+<script defer src="./assets/js/i18n.js?v=2025-10-19"></script>
+<script defer src="./assets/js/version.js?v=2025-10-19"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-10-19"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-10-19"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-10-19"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-10-19"></script>
+<script defer src="./assets/js/auth.js?v=2025-10-19"></script>
+<script defer src="./assets/js/guards.js?v=2025-10-19"></script>
+<script defer src="./assets/js/theme.js?v=2025-10-19"></script>
+<script defer src="./assets/js/corporate.js?v=2025-10-19"></script>
+<script defer src="./assets/js/about.js?v=2025-10-19"></script>
+<script defer src="./assets/js/exporter.js?v=2025-10-19"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -68,7 +74,4 @@
     </section>
   </main>
 </div>
-<script defer src="./assets/js/data-loader.js?v=20251019"></script>
-<script defer src="./assets/js/auth.js?v=20251019"></script>
-<script defer src="./assets/js/about.js?v=20251019"></script>
 </body></html>
