--- a/Devices.html
+++ b/Devices.html
@@ -2,11 +2,23 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Devices</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251019">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251019">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251019">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-10-19">
 <!-- optional page CSS -->
-<link rel="stylesheet" href="./assets/css/devices.css?v=20251019">
+<link rel="stylesheet" href="./assets/css/devices.css?v=2025-10-19">
+<script defer src="./assets/js/i18n.js?v=2025-10-19"></script>
+<script defer src="./assets/js/version.js?v=2025-10-19"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-10-19"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-10-19"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-10-19"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-10-19"></script>
+<script defer src="./assets/js/auth.js?v=2025-10-19"></script>
+<script defer src="./assets/js/guards.js?v=2025-10-19"></script>
+<script defer src="./assets/js/theme.js?v=2025-10-19"></script>
+<script defer src="./assets/js/devices.js?v=2025-10-19"></script>
+<script defer src="./assets/js/about.js?v=2025-10-19"></script>
+<script defer src="./assets/js/exporter.js?v=2025-10-19"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -14,7 +26,7 @@
     <div class="header header--devices">
       <div class="header__title" data-i18n="header.devices">Devices</div>
       <div class="header__actions">
-        <button class="btn btn--ghost" type="button" id="devices-export" data-i18n="label.export.csv">Export CSV</button>
+        <button class="btn btn--ghost" type="button" id="export-fleet" data-i18n="label.export.csv">Export CSV</button>
         <div id="team-filter" class="team-filter"></div>
         <div id="date-controls"></div>
         <button class="header__icon" type="button" data-about-trigger aria-label="About"></button>
@@ -22,15 +34,15 @@
     </div>
     <p id="devices-caption" class="header__caption" aria-live="polite"></p>
 
-    <section class="panel">
+    <section class="panel" id="fleet-summary-panel">
       <div class="panel__meta" data-i18n="section.devicesOverview">Fleet status</div>
-      <div class="kpi-grid" id="devices-cards" aria-live="polite"></div>
+      <div class="kpi-grid" id="fleet-cards" aria-live="polite"></div>
     </section>
 
-    <section class="panel">
+    <section class="panel" id="fleet-table-panel">
       <div class="panel__meta" data-i18n="section.devicesTable">Devices by team</div>
       <div class="devices-layout">
-        <div class="devices-table" id="devices-table" aria-live="polite"></div>
+        <div class="devices-table" id="fleet-table" aria-live="polite"></div>
         <div class="devices-distribution" aria-live="polite">
           <h3 data-i18n="devices.distribution">Battery distribution</h3>
           <div id="devices-histogram" class="devices-histogram"></div>
@@ -39,16 +51,4 @@
     </section>
   </main>
 </div>
-<script defer src="./assets/js/i18n.js"></script>
-<script defer src="./assets/js/version.js"></script>
-<script defer src="./assets/js/app-shell.js"></script>
-<script defer src="./assets/js/date-controls.js"></script>
-<script defer src="./assets/js/team-filter.js"></script>
-<!-- page script last -->
-<script defer src="./assets/js/data-loader.js?v=20251019"></script>
-<script defer src="./assets/js/auth.js?v=20251019"></script>
-<script defer src="./assets/js/guards.js?v=20251019"></script>
-<script defer src="./assets/js/theme.js?v=20251019"></script>
-<script defer src="./assets/js/about.js?v=20251019"></script>
-<script defer src="./assets/js/devices.js?v=20251019"></script>
 </body></html>
