--- a/User.html
+++ b/User.html
@@ -2,10 +2,24 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Wellness</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css">
-<link rel="stylesheet" href="./assets/css/ui.components.css">
-<link rel="stylesheet" href="./assets/css/app-shell.css">
-<link rel="stylesheet" href="./assets/css/wellness.css">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/wellness.css?v=2025-10-19">
+<script defer src="./assets/js/i18n.js?v=2025-10-19"></script>
+<script defer src="./assets/js/version.js?v=2025-10-19"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-10-19"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-10-19"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-10-19"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-10-19"></script>
+<script defer src="./assets/js/auth.js?v=2025-10-19"></script>
+<script defer src="./assets/js/guards.js?v=2025-10-19"></script>
+<script defer src="./assets/js/theme.js?v=2025-10-19"></script>
+<script defer src="./assets/js/mock-stream.js?v=2025-10-19"></script>
+<script defer src="./assets/js/wellbeing.compute.js?v=2025-10-19"></script>
+<script defer src="./assets/js/wellness-page.js?v=2025-10-19"></script>
+<script defer src="./assets/js/about.js?v=2025-10-19"></script>
+<script defer src="./assets/js/exporter.js?v=2025-10-19"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -142,16 +156,4 @@
     </section>
   </main>
 </div>
-<script defer src="./assets/js/data-loader.js"></script>
-<script defer src="./assets/js/auth.js"></script>
-<script defer src="./assets/js/guards.js"></script>
-<script defer src="./assets/js/theme.js"></script>
-<script defer src="./assets/js/i18n.js"></script>
-<script defer src="./assets/js/version.js"></script>
-<script defer src="./assets/js/app-shell.js"></script>
-<script defer src="./assets/js/date-controls.js"></script>
-<script defer src="./assets/js/about.js"></script>
-<script defer src="./assets/js/mock-stream.js"></script>
-<script defer src="./assets/js/wellbeing.compute.js"></script>
-<script defer src="./assets/js/wellness-page.js"></script>
 </body></html>
