feat(summary): render org KPIs with caption; wire to range/team; add k-anonymity guard

--- a/Summary.html
+++ b/Summary.html
@@ -12,6 +12,7 @@
 <script defer src="./assets/js/app-shell.js?v=2025-10-19"></script>
 <script defer src="./assets/js/date-controls.js?v=2025-10-19"></script>
 <script defer src="./assets/js/team-filter.js?v=2025-10-19"></script>
+<script defer src="./assets/js/summary.js?v=20251019"></script>
 <script defer src="./assets/js/data-loader.js?v=2025-10-19"></script>
 <script defer src="./assets/js/auth.js?v=2025-10-19"></script>
 <script defer src="./assets/js/guards.js?v=2025-10-19"></script>
@@ -38,6 +39,8 @@
       </div>
     </div>
     <p id="global-caption" class="header__caption" aria-live="polite"></p>
+    <p id="sum-caption" class="caption"></p>
+    <div id="sum-kpi-grid" class="grid grid-4"></div>
     <section id="hr-board" class="panel" aria-live="polite"></section>
   </main>
 </div>
