Add asset versioning and analytics delta windowing

--- a/Engagement.html
+++ b/Engagement.html
@@ -2,24 +2,24 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Engagement</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-10-19">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-10-19">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-10-19">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251020">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251020">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251020">
 <!-- optional page CSS -->
-<link rel="stylesheet" href="./assets/css/corporate.css?v=2025-10-19">
-<link rel="stylesheet" href="./assets/css/engagement.css?v=2025-10-19">
-<script defer src="./assets/js/i18n.js?v=2025-10-19"></script>
-<script defer src="./assets/js/version.js?v=2025-10-19"></script>
-<script defer src="./assets/js/app-shell.js?v=2025-10-19"></script>
-<script defer src="./assets/js/date-controls.js?v=2025-10-19"></script>
-<script defer src="./assets/js/team-filter.js?v=2025-10-19"></script>
-<script defer src="./assets/js/data-loader.js?v=2025-10-19"></script>
-<script defer src="./assets/js/auth.js?v=2025-10-19"></script>
-<script defer src="./assets/js/guards.js?v=2025-10-19"></script>
-<script defer src="./assets/js/theme.js?v=2025-10-19"></script>
-<script defer src="./assets/js/engagement.js?v=2025-10-19"></script>
-<script defer src="./assets/js/about.js?v=2025-10-19"></script>
-<script defer src="./assets/js/exporter.js?v=2025-10-19"></script>
+<link rel="stylesheet" href="./assets/css/corporate.css?v=20251020">
+<link rel="stylesheet" href="./assets/css/engagement.css?v=20251020">
+<script defer src="./assets/js/i18n.js?v=20251020"></script>
+<script defer src="./assets/js/version.js?v=20251020"></script>
+<script defer src="./assets/js/app-shell.js?v=20251020"></script>
+<script defer src="./assets/js/date-controls.js?v=20251020"></script>
+<script defer src="./assets/js/team-filter.js?v=20251020"></script>
+<script defer src="./assets/js/engagement.js?v=20251020"></script>
+<script defer src="./assets/js/about.js?v=20251020"></script>
+<script defer src="./assets/js/exporter.js?v=20251020"></script>
+<script defer src="./assets/js/data-loader.js?v=20251020"></script>
+<script defer src="./assets/js/auth.js?v=20251020"></script>
+<script defer src="./assets/js/guards.js?v=20251020"></script>
+<script defer src="./assets/js/theme.js?v=20251020"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
