--- a/Devices.html
+++ b/Devices.html
@@ -29,7 +29,7 @@
         <button class="btn btn--ghost" type="button" id="export-fleet" data-i18n="label.export.csv">Export CSV</button>
         <div id="team-filter" class="team-filter"></div>
         <div id="date-controls"></div>
-        <button class="header__icon" type="button" data-about-trigger aria-label="About"></button>
+        <button class="header__icon" type="button" data-about-trigger data-i18n="aria.about" data-i18n-attr="aria-label" aria-label="About"></button>
       </div>
     </div>
     <p id="devices-caption" class="header__caption" aria-live="polite"></p>
