--- a/Engagement.html
+++ b/Engagement.html
@@ -29,7 +29,7 @@
       <div class="header__actions">
         <div id="team-filter" class="team-filter"></div>
         <div id="date-controls"></div>
-        <button class="header__icon" type="button" data-about-trigger aria-label="About"></button>
+        <button class="header__icon" type="button" data-about-trigger data-i18n="aria.about" data-i18n-attr="aria-label" aria-label="About"></button>
       </div>
     </div>
     <p id="engagement-caption" class="header__caption" aria-live="polite"></p>
