--- a/Corporate.html
+++ b/Corporate.html
@@ -2,22 +2,23 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Corporate</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/corporate.css?v=20251020a">
-<script defer src="./assets/js/i18n.js?v=20251020a"></script>
-<script defer src="./assets/js/version.js?v=20251020a"></script>
-<script defer src="./assets/js/app-shell.js?v=20251020a"></script>
-<script defer src="./assets/js/date-controls.js?v=20251020a"></script>
-<script defer src="./assets/js/team-filter.js?v=20251020a"></script>
-<script defer src="./assets/js/corporate.js?v=20251020a"></script>
-<script defer src="./assets/js/about.js?v=20251020a"></script>
-<script defer src="./assets/js/exporter.js?v=20251020a"></script>
-<script defer src="./assets/js/data-loader.js?v=20251020a"></script>
-<script defer src="./assets/js/auth.js?v=20251020a"></script>
-<script defer src="./assets/js/guards.js?v=20251020a"></script>
-<script defer src="./assets/js/theme.js?v=20251020a"></script>
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/corporate.css?v=20251105a">
+<script defer src="./assets/js/i18n.js?v=20251105a"></script>
+<script defer src="./assets/js/version.js?v=20251105a"></script>
+<script defer src="./assets/js/app-shell.js?v=20251105a"></script>
+<script defer src="./assets/js/date-controls.js?v=20251105a"></script>
+<script defer src="./assets/js/team-filter.js?v=20251105a"></script>
+<script defer src="./assets/js/guard.js?v=20251105a"></script>
+<script defer src="./assets/js/corporate.js?v=20251105a"></script>
+<script defer src="./assets/js/about.js?v=20251105a"></script>
+<script defer src="./assets/js/exporter.js?v=20251105a"></script>
+<script defer src="./assets/js/data-loader.js?v=20251105a"></script>
+<script defer src="./assets/js/auth.js?v=20251105a"></script>
+<script defer src="./assets/js/guards.js?v=20251105a"></script>
+<script defer src="./assets/js/theme.js?v=20251105a"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -42,6 +43,11 @@
 
     <p id="corp-caption" class="caption" aria-live="polite"></p>
 
+    <div class="scenario-controls" role="group" aria-label="Scenario toggles" data-i18n="aria.scenario" data-i18n-attr="aria-label">
+      <button type="button" class="btn btn--ghost" id="btn-load-night" data-i18n="btn.loadScenario">Load Night-Shift Scenario</button>
+      <button type="button" class="btn btn--ghost" id="btn-return-live" data-i18n="btn.liveView">Return to Live View</button>
+    </div>
+
     <section id="corp-kpis" class="panel">
       <div class="panel__head" data-i18n="section.corporateOverview">Overview KPIs</div>
       <div id="corp-kpi-grid" class="grid grid-4"></div>
@@ -62,14 +68,19 @@
     <section id="corp-events" class="panel">
       <div class="panel__head">
         <span data-i18n="section.corporateEvents">Detected Events</span>
-        <div class="event-badges" id="event-badges" aria-live="polite"></div>
+        <div class="event-badges" id="event-badges" aria-live="polite">
+          <span class="pill pill--neutral" id="ev-count"></span>
+          <span class="pill pill--critical" id="ev-crit"></span>
+          <span class="pill pill--caution" id="ev-warn"></span>
+          <span class="pill pill--neutral" id="ev-info"></span>
+        </div>
         <div class="filters">
+          <label class="visually-hidden" for="f-team" data-i18n="events.filter.teamAll">All teams</label>
           <select id="f-team" multiple></select>
-          <select id="f-sev">
-            <option value="">All severities</option>
-            <option>info</option><option>warning</option><option>critical</option>
-          </select>
-          <select id="f-type"><option value="">All types</option></select>
+          <label class="visually-hidden" for="f-sev" data-i18n="events.filter.severityAll">All severities</label>
+          <select id="f-sev"></select>
+          <label class="visually-hidden" for="f-type" data-i18n="events.filter.typeAll">All types</label>
+          <select id="f-type"></select>
         </div>
       </div>
       <div id="events-list"></div>
