--- a/Pilot.html
+++ b/Pilot.html
@@ -2,23 +2,24 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Pilot Dashboard</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/engagement.css?v=20251020a">
-<link rel="stylesheet" href="./assets/css/pilot.css?v=20251020a">
-<script defer src="./assets/js/i18n.js?v=20251020a"></script>
-<script defer src="./assets/js/version.js?v=20251020a"></script>
-<script defer src="./assets/js/app-shell.js?v=20251020a"></script>
-<script defer src="./assets/js/date-controls.js?v=20251020a"></script>
-<script defer src="./assets/js/team-filter.js?v=20251020a"></script>
-<script defer src="./assets/js/pilot.js?v=20251020a"></script>
-<script defer src="./assets/js/about.js?v=20251020a"></script>
-<script defer src="./assets/js/exporter.js?v=20251020a"></script>
-<script defer src="./assets/js/data-loader.js?v=20251020a"></script>
-<script defer src="./assets/js/auth.js?v=20251020a"></script>
-<script defer src="./assets/js/guards.js?v=20251020a"></script>
-<script defer src="./assets/js/theme.js?v=20251020a"></script>
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/engagement.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/pilot.css?v=20251105a">
+<script defer src="./assets/js/i18n.js?v=20251105a"></script>
+<script defer src="./assets/js/version.js?v=20251105a"></script>
+<script defer src="./assets/js/app-shell.js?v=20251105a"></script>
+<script defer src="./assets/js/date-controls.js?v=20251105a"></script>
+<script defer src="./assets/js/team-filter.js?v=20251105a"></script>
+<script defer src="./assets/js/guard.js?v=20251105a"></script>
+<script defer src="./assets/js/pilot.js?v=20251105a"></script>
+<script defer src="./assets/js/about.js?v=20251105a"></script>
+<script defer src="./assets/js/exporter.js?v=20251105a"></script>
+<script defer src="./assets/js/data-loader.js?v=20251105a"></script>
+<script defer src="./assets/js/auth.js?v=20251105a"></script>
+<script defer src="./assets/js/guards.js?v=20251105a"></script>
+<script defer src="./assets/js/theme.js?v=20251105a"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -26,7 +27,7 @@
     <div class="header header--pilot">
       <div class="header__title" data-i18n="header.pilot">Pilot Dashboard</div>
       <div class="header__actions">
-        <button class="btn btn--ghost" type="button" id="pilot-export" data-i18n="label.export.pdf">Export Pilot Summary (PDF)</button>
+        <button class="btn btn--ghost" type="button" id="btn-export-pilot" data-i18n="label.export.pdf">Export Pilot Summary (PDF)</button>
         <div id="team-filter" class="team-filter"></div>
         <div id="date-controls"></div>
         <button class="header__icon" type="button" data-about-trigger aria-label="About"></button>
