Implement dashboard toast, filters, and sorting updates

--- a/Summary.html
+++ b/Summary.html
@@ -46,7 +46,7 @@
       <button type="button" id="btn-night-reset" class="btn btn--ghost" data-i18n="btn.liveView">Return to Live View</button>
     </div>
     <div id="sum-kpi-grid" class="grid grid-4"></div>
-    <div id="sum-toast" class="toast" aria-live="polite" role="status"></div>
+    <div id="sum-toast" class="toast" aria-live="polite" role="status" hidden></div>
     <section id="hr-board" class="panel" aria-live="polite"></section>
   </main>
 </div>
